--- a/home/home.html
+++ b/home/home.html
@@ -10,10 +10,10 @@
 <body>
   <main class="home-structure">
       <div class="home-img">
-      
+      <img src="../img/icontwitterbranco.svg" alt="iconbranco">
       </div>
       <div class="home-main">
-        <img src="../img/iconmonstr-twitter-1.svg" alt="iconetwitter">
+        <img class="maintopimg" src="../img/iconmonstr-twitter-1.svg" alt="iconetwitter">
       <h1>Acontecendo Agora</h1>
       <h2>inscreva-se no twitter hoje mesmo.</h2>
       <button  class="home-google" type="submit" id="google"><img src="../img/icons8-google-logo.svg" alt="googleicon"> inscreva-se com google</button>
@@ -30,8 +30,5 @@
     <button  class="login" type="submit" id="login"><strong> Entrar</strong></button>   
     </div>    
   </main>
-  <footer>
-
-  </footer>
 </body>
 </html>
