--- a/home/home.html
+++ b/home/home.html
@@ -27,7 +27,7 @@
       <h3>Ao se inscrever, você concorda com os Termos de Serviço e a Política de Privacidade, incluindo o Uso de Cookies.</h3>
     
     <h4>já tem uma conta?</h4> 
-    <button  class="login" type="submit" id="login"><strong> Entrar</strong></button>   
+    <button  class="login" type="submit" id="login"><a href="../index.html"><strong> Entrar</strong></a></button>   
     </div>    
   </main>
 </body>
