--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="rightline"></div> 
         </div>
         <input class="senha" type="text" id="password" placeholder="Celular,e-mail ou nome de usuário">
-        <button  class="advance" type="submit"><strong>Avançar</strong></button>
+        <button  class="advance"  type="submit"><strong><a href="../login/feed.html">Avançar</a></strong></button>
         <button  class="botton" type="submit">Esqueceu a senha?</button>
       </main>
       <footer>
